--- a/shortestrailpath/.classpath
+++ b/shortestrailpath/.classpath
@@ -12,25 +12,18 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Roli/Desktop/Tmp/jdom-2.0.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Roli/Desktop/Tmp/jdom-2.0.5-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Roli/Desktop/Tmp/jdom-2.0.5-junit.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Roli/Desktop/Tmp/jdom-2.0.5-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Roli/Desktop/Tmp/jdom-2.0.5-contrib.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Roli/Desktop/Tmp/lib/jaxen-1.1.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Roli/Desktop/Tmp/lib/xercesImpl.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Roli/Desktop/Tmp/lib/xml-apis.jar"/>
 	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
