--- a/shortestrailpath/pom.xml
+++ b/shortestrailpath/pom.xml
@@ -50,7 +50,7 @@
         <mainClass>ch.zhaw.hoferrol.shortestrailpath.main.Main</mainClass>
       </manifest>
       <manifestEntries>
-            <SplashScreen-Image>SplashScreen-Entwurf.png</SplashScreen-Image>
+            <SplashScreen-Image>SplashScreen-ShortestRailPath_V1-0-0.png</SplashScreen-Image>
           </manifestEntries>
     </archive>
     <descriptorRefs>
