--- a/shortestrailpath/pom.xml
+++ b/shortestrailpath/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>ch.zhaw</groupId>
   <artifactId>shortestrailpath</artifactId>
-  <version>0.0.4-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <name>shortestrailpath</name>
